--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -145,14 +145,13 @@
     "Home",
     "Registrar_Kr",
     "Registrar_Tarea",
+    "ListaOKRs",
     "Roadmap",
     "Kanban",
     "Editar_Kr",
     "Power_BI",
-    "Lista_Kr",
     "Pruebas Jose",
     "Confirmacion",
-    "Screen3",
-    "ListaOKRs"
+    "Screen3"
   ]
 }
