--- a/PowerApp/Src/App.fx.yaml
+++ b/PowerApp/Src/App.fx.yaml
@@ -7,7 +7,8 @@ App As appinfo:
         Set(pouplista_3,false);
         Set(displayModeVar,DisplayMode.View);
         Set(varEstadoKr,"sin aprobación");
-        Set(lastID, form_Registrar.LastSubmit.nombreKR)
+        Set(lastID, form_Registrar.LastSubmit.nombreKR);
+        Set(usuarioActual,User().Email)
     Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
